# A-Simple-Stereo-SLAM-System-with-Deep-Loop-Closing

./: .gitignore  CMakeLists.txt  README.md  debug.txt  run.sh
.VSCodeCounter/: details.md  results.csv  results.md  results.txt
app/: CMakeLists.txt  run_kitti_stereo.cpp
config/stereo/color/: KITTI00-02.yaml
config/stereo/gray/: KITTI00-02.yaml  KITTI03.yaml  KITTI04-12.yaml
include/myslam/: FASTcorner.h  ORBextractor.h  ORBmatcher.h  PnPsolver.h  algorithm.h  backend.h  camera.h  common_include.h  config.h  deeplcd.h  feature.h  frame.h  frontend.h  g2o_types.h  keyframe.h  loopclosing.h  map.h  mappoint.h  system.h  viewer.h
include/myslam/oldCodeBackup/: someBackup.cpp  tools.h
notes/: notes.md
result/: loopEdges.txt  trajectory.txt  trajectory0.txt  trajectory1.txt  trajectory_verygood.txt
src/: CMakeLists.txt  ORBextractor.cpp  ORBmatcher.cpp  PnPsolver.cc  backend.cpp  camera.cpp  config.cpp  deeplcd.cpp  feature.cpp  frame.cpp  frontend.cpp  keyframe.cpp  loopclosing.cpp  map.cpp  mappoint.cpp  someBackup.cpp  system.cpp  viewer.cpp
